# XMLBreaker

./: README.md  pyproject.toml
src/: xml_breaker.py
